ft_containers-unit-test/logs.txt
In file included from ../vector_tests/operator >=.cpp:2:
In file included from ../vector_tests/__service.ipp:3:
../vector_tests/../../../containers/vector.hpp:407:40: error: 'this' argument to member function 'begin' has type 'const vector<int, std::__1::allocator<int> >', but function is not marked const
        return(lexicographical_compare(lhs.begin(), lhs.end(), rhs.begin(), rhs.end()));
                                       ^~~
../vector_tests/../../../containers/vector.hpp:419:23: note: in instantiation of function template specialization 'ft::operator<<int, std::__1::allocator<int> >' requested here
        return (!(rhs < lhs));
                      ^
../vector_tests/operator >=.cpp:23:31: note: in instantiation of function template specialization 'ft::operator>=<int, std::__1::allocator<int> >' requested here
    result_2.push_back(V_int1 >= V_int2);
                              ^
../vector_tests/../../../containers/vector.hpp:101:22: note: 'begin' declared here
            iterator begin() {return iterator(m_ptr);}
                     ^
../vector_tests/../../../containers/vector.hpp:407:40: error: 'this' argument to member function 'begin' has type 'const vector<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >', but function is not marked const
        return(lexicographical_compare(lhs.begin(), lhs.end(), rhs.begin(), rhs.end()));
                                       ^~~
../vector_tests/../../../containers/vector.hpp:419:23: note: in instantiation of function template specialization 'ft::operator<<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >' requested here
        return (!(rhs < lhs));
                      ^
../vector_tests/operator >=.cpp:27:31: note: in instantiation of function template specialization 'ft::operator>=<std::__1::basic_string<char>, std::__1::allocator<std::__1::basic_string<char> > >' requested here
    result_2.push_back(V_str1 >= V_str2);
                              ^
../vector_tests/../../../containers/vector.hpp:101:22: note: 'begin' declared here
            iterator begin() {return iterator(m_ptr);}
                     ^
2 errors generated.
    ^
2 errors generated.
